# LearningTestTools

./: .gitignore  README.md
JavaCode/java-rest-client/src/: Main.java  NewsAPIClient.java
PythonCode/python-rest-client/: .env  main.py  pyproject.toml
